# codequery

./: .gitignore  CLAUDE.md  CONVENTIONS.md  Cargo.toml  EXAMPLES.md  LICENSE  README.md  justfile  llms.txt
.githooks/: pre-commit
.github/workflows/: ci.yml  grammars.yml  release.yml
crates/codequery-cli/: Cargo.toml  README.md
crates/codequery-cli/src/: args.rs  commands.rs  lib.rs  main.rs  output.rs
crates/codequery-cli/src/commands/: body.rs  callchain.rs  callers.rs  common.rs  context.rs  daemon.rs  dead.rs  def.rs  deps.rs  diagnostics.rs  grammar.rs  hierarchy.rs  hover.rs  imports.rs  outline.rs  refs.rs  rename.rs  search.rs  sig.rs  symbols.rs  tree.rs  upgrade.rs
crates/codequery-cli/tests/: test_coverage_tier1.rs  test_coverage_tier2.rs  test_cross_language.rs  test_def.rs  test_global.rs  test_lsp.rs  test_lsp_live.rs  test_outline.rs  test_phase3.rs  test_precision.rs  test_proof.rs  test_real_usage.rs  test_resolution.rs  test_tier2.rs
crates/codequery-cli/tests/common/: mod.rs
crates/codequery-core/: Cargo.toml  README.md
crates/codequery-core/src/: callchain.rs  config.rs  diagnostic.rs  dirs.rs  discovery.rs  edit.rs  error.rs  extract_config.rs  hierarchy.rs  hover.rs  lib.rs  path_utils.rs  project.rs  query.rs  reference.rs  symbol.rs  text_utils.rs
crates/codequery-index/: Cargo.toml  README.md
crates/codequery-index/benches/: scan_bench.rs
crates/codequery-index/src/: cache.rs  error.rs  grep.rs  index.rs  lib.rs  refs.rs  scanner.rs
crates/codequery-lsp/: Cargo.toml  README.md
crates/codequery-lsp/src/: cascade.rs  client.rs  config.rs  daemon.rs  daemon_file.rs  error.rs  lib.rs  oneshot.rs  pid.rs  protocol.rs  queries.rs  server.rs  socket.rs  transport.rs  types.rs
crates/codequery-mcp/: Cargo.toml  README.md
crates/codequery-mcp/src/: main.rs  protocol.rs  tools.rs
crates/codequery-mcp/tests/: integration.rs
crates/codequery-parse/: Cargo.toml  README.md
crates/codequery-parse/benches/: parse_bench.rs
crates/codequery-parse/src/: diagnostics.rs  error.rs  extract.rs  extract_engine.rs  hierarchy.rs  imports.rs  languages.rs  lib.rs  parser.rs  runtime_grammar.rs  search.rs  types.rs  wasm_loader.rs
crates/codequery-parse/src/languages/: bash.rs  c.rs  cpp.rs  csharp.rs  css.rs  go.rs  html.rs  java.rs  json.rs  kotlin.rs  lua.rs  php.rs  python.rs  ruby.rs  rust.rs  scala.rs  swift.rs  toml.rs  typescript.rs  yaml.rs  zig.rs
crates/codequery-parse/tests/: test_wasm_e2e.rs
crates/codequery-resolve/: Cargo.toml  README.md
crates/codequery-resolve/src/: error.rs  graph.rs  lib.rs  plugin_rules.rs  resolve.rs  resolver.rs  rules.rs  types.rs
crates/codequery-resolve/src/rules/: c.rs  cpp.rs  csharp.rs  go.rs  java.rs  javascript.rs  python.rs  ruby.rs  rust.rs  typescript.rs
crates/codequery-resolve/tests/: test_stack_graph_strict.rs
crates/codequery-resolve/tsg/c/: stack-graphs.tsg
crates/codequery-resolve/tsg/cpp/: stack-graphs.tsg
crates/codequery-resolve/tsg/csharp/: stack-graphs.tsg
crates/codequery-resolve/tsg/go/: stack-graphs.tsg
crates/codequery-resolve/tsg/ruby/: stack-graphs.tsg
crates/codequery-resolve/tsg/rust/: stack-graphs.tsg
docs/: architecture.md  examples.md  guide.md  languages.md
forks/lsp-positions/: .cargo_vcs_info.json  Cargo.toml
forks/lsp-positions/src/: lib.rs
forks/tree-sitter-graph/: .cargo_vcs_info.json  Cargo.toml
forks/tree-sitter-graph/src/: lib.rs
forks/tree-sitter-stack-graphs/: .cargo_vcs_info.json  Cargo.toml
forks/tree-sitter-stack-graphs/src/: lib.rs
languages/: registry.json
languages/ada/: extract.toml  lsp.toml
languages/bash/: extract.toml  lsp.toml
languages/bicep/: extract.toml  lsp.toml
languages/c/: extract.toml
languages/cairo/: extract.toml  lsp.toml
languages/clojure/: extract.toml  lsp.toml
languages/cmake/: extract.toml  lsp.toml
languages/cobol/: extract.toml
languages/common-lisp/: extract.toml
languages/cpp/: extract.toml
languages/csharp/: extract.toml  lsp.toml
languages/css/: extract.toml
languages/csv/: extract.toml
languages/cuda/: extract.toml  lsp.toml
languages/d/: extract.toml  lsp.toml
languages/dart/: extract.toml  lsp.toml
languages/diff/: extract.toml
languages/dockerfile/: extract.toml  lsp.toml
languages/elixir/: extract.toml  lsp.toml
languages/elm/: extract.toml  lsp.toml
languages/erlang/: extract.toml  lsp.toml
languages/fortran/: extract.toml  lsp.toml
languages/fsharp/: extract.toml  lsp.toml
languages/glsl/: extract.toml
languages/go/: extract.toml
languages/graphql/: extract.toml  lsp.toml
languages/groovy/: extract.toml  lsp.toml
languages/haskell/: extract.toml  lsp.toml
languages/html/: extract.toml
languages/ini/: extract.toml
languages/java/: extract.toml
languages/javascript/: extract.toml
languages/json/: extract.toml
languages/julia/: extract.toml  lsp.toml
languages/just/: extract.toml
languages/kotlin/: extract.toml  lsp.toml
languages/latex/: extract.toml  lsp.toml
languages/llvm-ir/: extract.toml
languages/lua/: extract.toml  lsp.toml
languages/makefile/: extract.toml
languages/markdown/: extract.toml  lsp.toml
languages/nginx/: extract.toml  lsp.toml
languages/nix/: extract.toml  lsp.toml
languages/objective-c/: extract.toml  lsp.toml
languages/ocaml/: extract.toml  lsp.toml
languages/org/: extract.toml
languages/pascal/: extract.toml  lsp.toml
languages/perl/: extract.toml  lsp.toml
languages/php/: extract.toml
languages/pkl/: extract.toml
languages/prisma/: extract.toml  lsp.toml
languages/protobuf/: extract.toml  lsp.toml
languages/purescript/: extract.toml  lsp.toml
languages/python/: extract.toml
languages/r/: extract.toml  lsp.toml
languages/racket/: extract.toml  lsp.toml
languages/restructuredtext/: extract.toml
languages/ruby/: extract.toml
languages/rust/: extract.toml
languages/scala/: extract.toml
languages/scheme/: extract.toml  lsp.toml
scripts/: build-grammars.sh  lsp-validation.sh  smoke-test.sh  test-repos.json  validate-languages.sh
(+86 files in other folders)
