[workspace]
members = ["crates/*"]
exclude = ["tests/fixtures/rust_project", "tests/fixtures/python_project", "tests/fixtures/java_project", "tests/fixtures/typescript_project", "tests/fixtures/c_project", "tests/fixtures/cpp_project", "tests/fixtures/mixed_project"]
resolver = "2"

[workspace.dependencies]
tempfile = "3"
