[package]
name = "codequery-cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "cq"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
codequery-core = { path = "../codequery-core" }
codequery-index = { path = "../codequery-index" }
codequery-parse = { path = "../codequery-parse" }
codequery-resolve = { path = "../codequery-resolve" }

[dev-dependencies]
tempfile = { workspace = true }
serde_json = "1"
tree-sitter = "0.24"
