[package]
name = "codequery-cli"
version = "1.0.0"
license = "Apache-2.0"
description = "Semantic code query tool for the command line"
repository = "https://github.com/jmfirth/codequery"
edition = "2021"

[features]
default = ["codequery-parse/common", "codequery-parse/wasm", "codequery-resolve/wasm"]

# Enable all compiled-in languages. Used by CI and `cargo test --workspace`.
# Not a user-facing feature — the common preset defines the release binary.
test-all-langs = ["codequery-parse/test-all-langs"]

[[bin]]
name = "cq"
path = "src/main.rs"

[[bin]]
name = "generate-manpage"
path = "src/bin/generate-manpage.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
clap_mangen = "0.2"
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
codequery-core = { path = "../codequery-core" }
codequery-index = { path = "../codequery-index" }
codequery-lsp = { path = "../codequery-lsp" }
codequery-parse = { path = "../codequery-parse" }
codequery-resolve = { path = "../codequery-resolve" }

[dev-dependencies]
tempfile = { workspace = true }
serde_json = "1"
tree-sitter = "0.26"
