[package]
name = "codequery-core"
version = "0.1.0"
license = "Apache-2.0"
description = "Core types, project detection, and file discovery for cq"
repository = "https://github.com/jmfirth/codequery"
edition = "2021"

[dependencies]
thiserror = "2"
ignore = "0.4"
serde = { version = "1", features = ["derive"] }
toml = "0.8"
glob = "0.3"

[dev-dependencies]
tempfile = { workspace = true }
serde_json = "1"
