[package]
name = "codequery-index"
version = "0.1.0"
license = "Apache-2.0"
edition = "2021"

[dependencies]
rayon = "1"
memmap2 = "0.9"
memchr = "2"
tree-sitter = "0.24"
codequery-core = { path = "../codequery-core" }
codequery-parse = { path = "../codequery-parse" }
thiserror = "2"
bincode = "1"
sha2 = "0.10"
serde = { version = "1", features = ["derive"] }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
tempfile = { workspace = true }

[[bench]]
name = "scan_bench"
harness = false
