[package]
name = "codequery-lsp"
version = "0.1.0"
edition = "2021"

[dependencies]
codequery-core = { path = "../codequery-core" }
codequery-index = { path = "../codequery-index" }
codequery-resolve = { path = "../codequery-resolve" }
libc = "0.2"
thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
codequery-parse = { path = "../codequery-parse" }
tempfile = { workspace = true }
