[package]
name = "codequery-lsp"
version = "0.1.0"
license = "Apache-2.0"
description = "LSP client, daemon, and precision cascade for cq"
repository = "https://github.com/jmfirth/codequery"
edition = "2021"

[dependencies]
codequery-core = { path = "../codequery-core" }
codequery-index = { path = "../codequery-index" }
codequery-resolve = { path = "../codequery-resolve" }
ctrlc = "3"
thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[target.'cfg(unix)'.dependencies]
mio = { version = "1", features = ["os-poll", "os-ext"] }

[dev-dependencies]
codequery-parse = { path = "../codequery-parse" }
tempfile = { workspace = true }
