[package]
name = "codequery-mcp"
version = "0.1.0"
license = "Apache-2.0"
edition = "2021"
description = "MCP (Model Context Protocol) server exposing cq functionality to AI tools"
repository = "https://github.com/jmfirth/codequery"

[[bin]]
name = "cq-mcp"
path = "src/main.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
