[package]
name = "codequery-parse"
version = "0.1.0"
license = "Apache-2.0"
description = "Tree-sitter parsing and symbol extraction for 16 languages"
repository = "https://github.com/jmfirth/codequery"
edition = "2021"

[dependencies]
codequery-core = { path = "../codequery-core" }
libloading = "0.8"
serde = { version = "1", features = ["derive"] }
streaming-iterator = "0.1"
thiserror = "2"
tree-sitter = "0.26"
tree-sitter-rust = "0.24"
tree-sitter-typescript = "0.23"
tree-sitter-javascript = "0.25"
tree-sitter-python = "0.25"
tree-sitter-go = "0.25"
tree-sitter-c = "0.24"
tree-sitter-cpp = "0.23"
tree-sitter-java = "0.23"
tree-sitter-ruby = "0.23"
tree-sitter-php = "0.24"
tree-sitter-c-sharp = "0.23"
tree-sitter-swift = "0.7"
tree-sitter-scala = "0.25"
tree-sitter-zig = "1"
tree-sitter-lua = "0.5"
tree-sitter-bash = "0.25"
tree-sitter-kotlin-ng = "1"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
tempfile = { workspace = true }

[[bench]]
name = "parse_bench"
harness = false
