[package]
name = "codequery-parse"
version = "1.0.0"
license = "Apache-2.0"
description = "Tree-sitter parsing and symbol extraction for 21 languages"
repository = "https://github.com/jmfirth/codequery"
edition = "2021"

[features]
default = ["wasm"]
wasm = ["tree-sitter/wasm"]

[dependencies]
codequery-core = { path = "../codequery-core" }
libloading = "0.8"
serde = { version = "1", features = ["derive"] }
streaming-iterator = "0.1"
thiserror = "2"
tree-sitter = { version = "0.26", default-features = false, features = ["std"] }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
tempfile = { workspace = true }

[[bench]]
name = "parse_bench"
harness = false
