[package]
name = "codequery-resolve"
version = "1.0.0"
license = "Apache-2.0"
description = "Stack graph name resolution with TSG rules for 10 languages"
repository = "https://github.com/jmfirth/codequery"
edition = "2021"

[dependencies]
codequery-core = { path = "../codequery-core" }
codequery-index = { path = "../codequery-index" }
thiserror = "2"
tree-sitter = "0.26"
tree-sitter-stack-graphs = "0.10"
stack-graphs = "0.14"
# Grammar versions must match the TSG rules bundled in tree-sitter-stack-graphs.
# These 0.23 grammars use tree-sitter-language (not tree-sitter directly),
# so they are ABI-compatible with tree-sitter 0.26.
tree-sitter-python = "0.23"
tree-sitter-typescript = "0.23"
tree-sitter-javascript = "0.23"
tree-sitter-java = "0.23"
tree-sitter-go = "0.23"
tree-sitter-c = "0.23"
tree-sitter-c-sharp = "0.23"
tree-sitter-cpp = "0.23"
tree-sitter-rust = "0.23"
tree-sitter-ruby = "0.23"

[dev-dependencies]
codequery-parse = { path = "../codequery-parse" }
tempfile = { workspace = true }
