[package]
edition = "2018"
name = "tree-sitter-graph"
version = "0.12.0"
description = "Construct graphs from parsed source code (codequery fork for tree-sitter 0.26)"
license = "MIT OR Apache-2.0"
autobins = false
autotests = false
autobenches = false

[lib]
name = "tree_sitter_graph"
path = "src/lib.rs"

[dependencies]
log = "0.4"
regex = "1.3.2"
serde = "1.0"
serde_json = "1.0"
smallvec = { version = "1.6", features = ["union"] }
streaming-iterator = "0.1.9"
thiserror = "1.0.7"
tree-sitter = "0.26"

# Optional (not used by codequery)
colored = { version = "2", optional = true }

[features]
term-colors = ["colored"]
