[package]
edition = "2018"
name = "tree-sitter-stack-graphs"
version = "0.10.0"
description = "Create stack graphs using tree-sitter parsers (codequery fork for tree-sitter 0.26)"
license = "MIT OR Apache-2.0"
autobins = false
autotests = false
autobenches = false

[lib]
name = "tree_sitter_stack_graphs"
path = "src/lib.rs"

[dependencies]
anyhow = "1.0.4"
controlled-option = "0.4.1"
itertools = "0.10"
log = "0.4"
once_cell = "1"
regex = "1"
rust-ini = "0.18"
thiserror = "1.0"
tree-sitter = "0.26"
stack-graphs = "0.14"
lsp-positions = { path = "../lsp-positions", features = ["tree-sitter"] }
tree-sitter-graph = { path = "../tree-sitter-graph" }

# Loader is optional — codequery does not use it.
tree-sitter-loader = { version = "0.26", optional = true }

[features]
default = []
loader = ["tree-sitter-loader"]
